--- a/TreeTracker/UI/Views/Home/Home.storyboard
+++ b/TreeTracker/UI/Views/Home/Home.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,6 +40,7 @@
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sapling_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="Jcp-ks-G93">
                                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
+                                                                        <color key="tintColor" name="PrimaryGreen"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="60" id="owP-nG-URb"/>
                                                                         </constraints>
@@ -80,6 +82,7 @@
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forward" translatesAutoresizingMaskIntoConstraints="NO" id="LeN-Qn-O0O">
                                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="75"/>
+                                                                        <color key="tintColor" name="SecondaryOrangeDark"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="60" id="7FH-s2-iYe"/>
                                                                         </constraints>
@@ -129,7 +132,9 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="gMM-kE-sht"/>
                                                 </constraints>
-                                                <state key="normal" title="UPLOAD"/>
+                                                <state key="normal" title="UPLOAD">
+                                                    <color key="titleColor" name="SecondaryGreen"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="uploadsButtonPressed" destination="N4B-25-WOc" eventType="touchUpInside" id="9bk-gf-chJ"/>
                                                 </connections>
@@ -140,7 +145,9 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="zJG-qE-EKX"/>
                                                 </constraints>
-                                                <state key="normal" title="ADD TREE"/>
+                                                <state key="normal" title="ADD TREE">
+                                                    <color key="titleColor" name="SecondaryOrangeDark"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="addTreeButtonPressed" destination="N4B-25-WOc" eventType="touchUpInside" id="6rT-b8-4gX"/>
                                                 </connections>
@@ -207,5 +214,14 @@
     <resources>
         <image name="forward" width="447" height="632"/>
         <image name="sapling_Icon" width="810" height="1665"/>
+        <namedColor name="PrimaryGreen">
+            <color red="0.52499997615814209" green="0.76099997758865356" blue="0.19599999487400055" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SecondaryGreen">
+            <color red="0.37999999523162842" green="0.53700000047683716" blue="0.18400000035762787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SecondaryOrangeDark">
+            <color red="0.98431372549019602" green="0.29411764705882354" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
