--- a/TreeTracker/UI/Views/Home/Home.storyboard
+++ b/TreeTracker/UI/Views/Home/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N4B-25-WOc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N4B-25-WOc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="m42-LK-6b5">
-                                <rect key="frame" x="20" y="20" width="374" height="361.5"/>
+                                <rect key="frame" x="20" y="20" width="374" height="481.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ykq-Tq-lbU">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="100.5"/>
@@ -124,7 +124,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="zXG-hz-i9A">
-                                        <rect key="frame" x="0.0" y="141.5" width="374" height="220"/>
+                                        <rect key="frame" x="0.0" y="141.5" width="374" height="340"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqC-aQ-0Lz" customClass="UploadsButton" customModule="TreeTracker" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
@@ -150,6 +150,19 @@
                                                 </state>
                                                 <connections>
                                                     <action selector="addTreeButtonPressed" destination="N4B-25-WOc" eventType="touchUpInside" id="6rT-b8-4gX"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="INa-Lf-uBm" customClass="ViewTreesButton" customModule="TreeTracker" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="240" width="374" height="100"/>
+                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="WkN-So-oKH"/>
+                                                </constraints>
+                                                <state key="normal" title="VIEW TREES">
+                                                    <color key="titleColor" name="SecondaryOrangeDark"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="viewTreesButtonPressed" destination="N4B-25-WOc" eventType="touchUpInside" id="Om5-7o-3uW"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -204,6 +217,7 @@
                         <outlet property="uploadsButton" destination="QqC-aQ-0Lz" id="dXq-nX-OIz"/>
                         <outlet property="uploadsCountLabel" destination="SQa-Oy-BZK" id="eS8-NO-7HY"/>
                         <outlet property="uploadsCountView" destination="H4G-QY-aoV" id="DLt-gP-jx8"/>
+                        <outlet property="viewTreesButton" destination="INa-Lf-uBm" id="W52-cB-4Gy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FmC-cU-XtJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
