--- a/TreeTracker/UI/Views/View Trees/ViewTrees.storyboard
+++ b/TreeTracker/UI/Views/View Trees/ViewTrees.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,19 +22,35 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mnc-6j-Sx7">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="413" height="162"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ViewTreesCollectionViewCell" id="QS8-Po-WAg" customClass="ViewTreesCollectionViewCell" customModule="TreeTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ViewTreesCollectionViewCell" id="AOf-sQ-OtV" customClass="ViewTreesCollectionViewCell" customModule="TreeTracker" customModuleProvider="target">
+                                        <rect key="frame" x="0.5" y="0.0" width="413" height="162"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sMI-pz-zx1">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6hQ-ky-LRx">
+                                            <rect key="frame" x="0.0" y="0.0" width="413" height="162"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9M5-9M-KVj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="413" height="162"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" name="SecondaryOrangeDark"/>
+                                            <constraints>
+                                                <constraint firstItem="9M5-9M-KVj" firstAttribute="height" secondItem="6hQ-ky-LRx" secondAttribute="height" id="1CQ-Ab-JtK"/>
+                                                <constraint firstItem="9M5-9M-KVj" firstAttribute="centerX" secondItem="6hQ-ky-LRx" secondAttribute="centerX" id="Ira-0u-R8H"/>
+                                                <constraint firstItem="9M5-9M-KVj" firstAttribute="width" secondItem="6hQ-ky-LRx" secondAttribute="width" id="tY8-w5-0UF"/>
+                                                <constraint firstItem="9M5-9M-KVj" firstAttribute="centerY" secondItem="6hQ-ky-LRx" secondAttribute="centerY" id="wac-Bt-zRl"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="413" height="162"/>
+                                        <connections>
+                                            <outlet property="treesImage" destination="9M5-9M-KVj" id="kMl-ZD-Qo2"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -49,7 +66,7 @@
                         <viewLayoutGuide key="safeArea" id="r3r-T7-4Np"/>
                     </view>
                     <connections>
-                        <outlet property="viewTrees" destination="C0D-HX-AXp" id="j6W-wX-E0z"/>
+                        <outlet property="collectionView" destination="C0D-HX-AXp" id="j6W-wX-E0z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GXk-QA-ZOV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -57,4 +74,9 @@
             <point key="canvasLocation" x="234.78260869565219" y="196.875"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="SecondaryOrangeDark">
+            <color red="0.98431372549019602" green="0.29411764705882354" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
