--- a/TreeTracker/UI/Views/AddTree/AddTree.storyboard
+++ b/TreeTracker/UI/Views/AddTree/AddTree.storyboard
@@ -104,7 +104,8 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                         <viewLayoutGuide key="safeArea" id="ABb-le-R5N"/>
+                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>                        
                         <constraints>
                             <constraint firstItem="ABb-le-R5N" firstAttribute="trailing" secondItem="6h2-Pn-xih" secondAttribute="trailing" constant="20" id="0tu-Ro-RNk"/>
                             <constraint firstItem="6h2-Pn-xih" firstAttribute="top" secondItem="ABb-le-R5N" secondAttribute="top" constant="20" id="Mzr-S4-4xf"/>
