--- a/TreeTracker/UI/Views/Authentication/SignIn/SignIn.storyboard
+++ b/TreeTracker/UI/Views/Authentication/SignIn/SignIn.storyboard
@@ -126,5 +126,6 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>    
     </resources>
 </document>
