--- a/TreeTracker/UI/Views/Authentication/SignUp/SignUp.storyboard
+++ b/TreeTracker/UI/Views/Authentication/SignUp/SignUp.storyboard
@@ -163,6 +163,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="T1m-Ef-7d1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="T1m-Ef-7d1" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="UUb-y1-78U" secondAttribute="bottom" id="EDT-6N-8KL"/>
