Revert "Add tree photo ability"

--- a/TreeTracker/UI/Views/AddTree/AddTree.storyboard
+++ b/TreeTracker/UI/Views/AddTree/AddTree.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QqA-0g-MHc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QqA-0g-MHc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -22,21 +22,17 @@
                                 <rect key="frame" x="20" y="64" width="374" height="778"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6FW-r5-8Jp">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="418"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="478"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xSI-zv-QQU">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="418"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="478"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gardening" translatesAutoresizingMaskIntoConstraints="NO" id="3Hj-Fo-eNR" customClass="AV">
-                                                <rect key="frame" x="103.5" y="152.5" width="167" height="113"/>
+                                                <rect key="frame" x="103.5" y="173.5" width="167" height="131"/>
                                                 <color key="tintColor" name="PrimaryGreen"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="phoneViewfinder" translatesAutoresizingMaskIntoConstraints="NO" id="Ult-3x-hnO">
-                                                <rect key="frame" x="20" y="20" width="334" height="378"/>
-                                            </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="focus" translatesAutoresizingMaskIntoConstraints="NO" id="Yxa-Xu-CNe">
-                                                <rect key="frame" x="-10" y="0.0" width="395" height="491"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <rect key="frame" x="20" y="20" width="334" height="438"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -56,7 +52,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="GPS ACCURACY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5D-vA-1iO" customClass="GPSAccuracyLabel" customModule="TreeTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="438" width="374" height="30"/>
+                                        <rect key="frame" x="0.0" y="498" width="374" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="aNH-Fz-W21"/>
                                         </constraints>
@@ -65,7 +61,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nEU-4l-5Fm">
-                                        <rect key="frame" x="0.0" y="488" width="374" height="290"/>
+                                        <rect key="frame" x="0.0" y="548" width="374" height="230"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yVh-Az-lD5" customClass="PrimaryButton" customModule="TreeTracker" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
@@ -80,18 +76,8 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xXR-fS-Zni">
                                                 <rect key="frame" x="0.0" y="60" width="374" height="50"/>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9G-n5-UVp" customClass="PrimaryButton" customModule="TreeTracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="120" width="374" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="Izh-3r-uX2"/>
-                                                </constraints>
-                                                <state key="normal" title="PHOTO LIBRARY"/>
-                                                <connections>
-                                                    <action selector="retryPhotoButtonPressed" destination="QqA-0g-MHc" eventType="touchUpInside" id="hwI-HK-ltU"/>
-                                                </connections>
-                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kua-rl-Tpa" customClass="PrimaryButton" customModule="TreeTracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="180" width="374" height="50"/>
+                                                <rect key="frame" x="0.0" y="120" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="fP8-7f-wRO"/>
                                                 </constraints>
@@ -101,7 +87,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FOR-gW-lk7" customClass="PrimaryButton" customModule="TreeTracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="240" width="374" height="50"/>
+                                                <rect key="frame" x="0.0" y="180" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="TSq-Gj-eoe"/>
                                                 </constraints>
@@ -130,24 +116,20 @@
                     <connections>
                         <outlet property="choosePhotoButton" destination="kua-rl-Tpa" id="3Nu-pv-mQ3"/>
                         <outlet property="gpsAccuracyLabel" destination="q5D-vA-1iO" id="ibb-DA-7RB"/>
-                        <outlet property="previewView" destination="6FW-r5-8Jp" id="cPq-fA-nJ9"/>
-                        <outlet property="retryPhotoButton" destination="f9G-n5-UVp" id="8Qs-3E-qVX"/>
                         <outlet property="saveTreeButton" destination="FOR-gW-lk7" id="mce-1T-y2Y"/>
                         <outlet property="searchGPSSignalImageView" destination="xXR-fS-Zni" id="WVO-K4-wYN"/>
                         <outlet property="takePhotoButton" destination="yVh-Az-lD5" id="lko-a8-9cL"/>
                         <outlet property="treeGuidenceImageView" destination="3Hj-Fo-eNR" id="R2z-cE-btW"/>
                         <outlet property="treeImageView" destination="xSI-zv-QQU" id="oPL-lc-w6V"/>
-                        <outlet property="treeViewFinderFocus" destination="Yxa-Xu-CNe" id="1Zz-5g-1Wt"/>
                         <outlet property="viewfinderGuidenceImageView" destination="Ult-3x-hnO" id="stW-6a-TSk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nx-9w-taF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="76.811594202898561" y="65.625"/>
+            <point key="canvasLocation" x="77" y="66"/>
         </scene>
     </scenes>
     <resources>
-        <image name="focus" width="512" height="512"/>
         <image name="gardening" width="384" height="384"/>
         <image name="phoneViewfinder" width="384" height="384"/>
         <namedColor name="PrimaryGreen">
